Section 18 - Summary and Payments

--- a/BulkyBook/appsettings.json
+++ b/BulkyBook/appsettings.json
@@ -11,5 +11,9 @@
   },
   "AllowedHosts": "*",
   "SendGridKey": "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",
-  "SendGridUser": "BulkyBook"
+  "SendGridUser": "BulkyBook",
+  "Stripe": {
+    "SecretKey": "sk_test_WKqbrPAGDHqHRuGauPl1BJwR00mx0mZGy8",
+    "PublishableKey": "pk_test_ct2earmEUGFAo8AA4jaVc4KR00FoTuud0j"
+  }
 }
