Section 20 - Advance Concepts

--- a/BulkyBook/appsettings.json
+++ b/BulkyBook/appsettings.json
@@ -15,5 +15,10 @@
   "Stripe": {
     "SecretKey": "sk_test_WKqbrPAGDHqHRuGauPl1BJwR00mx0mZGy8",
     "PublishableKey": "pk_test_ct2earmEUGFAo8AA4jaVc4KR00FoTuud0j"
+  },
+  "Twilio": {
+    "PhoneNumber": "+12562545323",
+    "AuthToken": "ea84",
+    "AccountSid": "AC58"
   }
 }
